2006-11-06  Nurdin Premji  <npremji@edhat.com>

	* TestFStack.java: Ran GNU Formatter. 
	(secondaryClone): Changed to use an array for easy updating of regex.
	(testClone): Ditto.	
	* StacktraceObserver.java: Ran gnu formatter
	(taskAddFailed): Changed from taskRemoved.

2006-11-03  Nurdin Premji  <npremji@edhat.com>

	* TestFStack.java (secondaryThread): Changed to array to hold all different
	regexs of a secondary thread.
	(testClone): Added.
	(secondaryCloneB): Added.
	(mainThread): Changed to array to hold multiple regexs.
	(multiThreaded): Changed to use arrays.
	(mainClone): Changed.
	(secondaryClone): Changed.	
	* StacktraceObserver.java (existingTask): Changed back to use full list of tasks and 
	remove as tasks are handled.
	(taskRemoved): Ditto.
	(StacktraceObserver): Ditto. 

2006-11-02  Nurdin Premji  <npremji@redhat.com>

	* TestFStack.java (testStressMultiThreadedDetach): Removed thrown IOException
	(testMultiThreadedAckDaemon): Ditto.
	(testSingleThreadedDetached): Ditto.
	(multiThreaded): Ditto.
	(testSingleThreadedAckDaemon): Ditto.
	(testMultiThreadedDetached): Ditto.
	
	(testMultiThreadedAckDaemon): Changed regex.
	(testStressMultiThreadedDetach): Ditto.
	(testSingleThreadedDetached): Ditto.
	(testSingleThreadedAckDaemon): Ditto.
	(testMultiThreadedDetached): Ditto.
	(mainThreadB): Added.
	(multiThreaded): Changed regex
	(mainClone): Added.
	(secondaryClone): Added.
	(secondaryThreadB): Added.

2006-11-01  Nurdin Premji  <npremji@redhat.com>

	* TestFStack.java (multiThreaded): Changed to reflect StacktraceObserver using a StringBuffer
	rather than a PrintWriter.
	(mainThread): Ditto.
	(secondaryThread): 	Ditto.
	* StacktraceObserver.java: Added (C).
	(StacktraceObserver): Changed to use StringBuffer rather than PrintWriter. 
	(printTasks): Ditto.
	(existingTask): Changed to append tasks to an empty list instead of removing them 
	from a full list.
	(taskRemoved): Added
	(storeTask): Used StackFrame.toPrint() method.
	(toPrint): Added